[nico cp] implement layout menu screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">phdrevamp</string>
+    <string name="calculator_result">Rp %1s</string>
+    <string name="currency_separator">.</string>
 </resources>
